# CS_Camera

./: .gitignore  README.md
Firmware/: .gitkeep
Firmware/main/cs_camera/: .gitignore  (+3 more)
Firmware/main/cs_camera/modules/display/: CMakeLists.txt  WalshMaskGenerator.c  WalshMaskGenerator.h  display_test.c  lcd_controller.c  lcd_controller.h  lcd_driver.c  lcd_driver.h
Firmware/sd_card_reading/: CMakeLists.txt  hw_config.c  sd_card_reading.c
Image_reconstruction/: .gitkeep
Reconstruction-Software/: .gitignore  Camera_Emulator.m  Emulation_app.mlapp  Reconstruction_app.mlapp  camera_data_export.csv  export.m  load_config.m  optimal_indices.txt  penguin.tiff  readme.md  sensor_data.csv  simpleReconstruction.m  simulateCapture.m  smile.tiff  test.m
Reconstruction-Software/+models/: cs_enhancement_net_CNN.mat  cs_enhancement_net_ResNet.mat  cs_enhancement_net_ResNet_50p.mat  cs_enhancement_net_ResNet_new.mat
Reconstruction-Software/+reco/: cnnReconstruction.m  simpleReconstruction.m  tvReconstruction.m
Reconstruction-Software/+tools/: export_cpp_array.m  generate_optimal_core.m  generate_training_data.m  getOptimalCore.m  test_emulateCameraCapture.m  test_single_image.m  train_CS_Enhancement_CNN.m  verify_codebooks.m
Reconstruction-Software/+utils/: emulateCameraCapture.m  generateWalshMask.m  generate_walsh_mask.m  getOptimalCore.m  loadConfig.m  selectMaskIndexes.m  simulateCapture.m
Reconstruction-Software/configs/: camera_settings.json  hardware_profile.json
Reconstruction-Software/mask_firmware/: WalshMaskGenerator.cpp  main.cpp
hardware/: .gitkeep
(+19 files in other folders)
